Dodana mogucnost prihvacanja i odbijanja produzivanja
